--- a/Programs/Program2/Makefile
+++ b/Programs/Program2/Makefile
@@ -5,18 +5,18 @@ CC= gcc
 CFLAGS= -g -Wall -std=gnu99
 LIBS = 
 
-OBJS = networks.o gethostbyname.o pollLib.o safeUtil.o pdu.o
+OBJS = networks.o gethostbyname.o pollLib.o safeUtil.o pdu.o handleTable.o
 
-# all:   cclient server
-all:   handletable
+all:   cclient server
+# all:   handletable
 
-handletable: handleTable.c $(OBJS)
-	$(CC) $(CFLAGS) -o handletable handleTable.c  $(OBJS) $(LIBS)
-# cclient: cclient.c $(OBJS)
-# 	$(CC) $(CFLAGS) -o cclient cclient.c  $(OBJS) $(LIBS)
+# handletable: handleTable.c $(OBJS)
+# $(CC) $(CFLAGS) -o handletable handleTable.c  $(OBJS) $(LIBS)
+cclient: cclient.c $(OBJS)
+	$(CC) $(CFLAGS) -o cclient cclient.c  $(OBJS) $(LIBS)
 
-# server: server.c $(OBJS)
-# 	$(CC) $(CFLAGS) -o server server.c $(OBJS) $(LIBS)
+server: server.c $(OBJS)
+	$(CC) $(CFLAGS) -o server server.c $(OBJS) $(LIBS)
 
 .c.o:
 	gcc -c $(CFLAGS) $< -o $@ $(LIBS)
@@ -25,8 +25,8 @@ cleano:
 	rm -f *.o
 
 clean:
-	rm -f handletable *.o
-# rm -f server cclient *.o
+# rm -f handletable *.o
+	rm -f server cclient *.o
 
 
 
