Working Without any Error

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ Programs/Program2/handletable
 Programs/Program2/server
 Programs/Program2/pdu.o
 Programs/Program2/manyHandles.c
+Programs/Program3/out2.bmp
+Programs/Program3/jar.bmp
