--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ Programs/Program2/pdu.o
 Programs/Program2/manyHandles.c
 Programs/Program3/out2.bmp
 Programs/Program3/jar.bmp
+Programs/Program3/out.c
