--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@ Programs/Program2/manyHandles.c
 Programs/Program3/out2.bmp
 Programs/Program3/jar.bmp
 Programs/Program3/out.c
+Programs/Program3/largeFile.txt
+Programs/Program3/mediumFile.txt
+Programs/Program3/out.txt
+Programs/Program3/smallFile.txt
